plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.ridetogether'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	compileOnly 'org.springframework.boot:spring-boot-starter-security'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'io.rest-assured:rest-assured:5.3.0'

	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
	testImplementation 'org.junit.platform:junit-platform-launcher:1.9.0'
	testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.0'

	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
	// Http Interface
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// FOR @ConfigurationProperties
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	//json 웹토큰
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//oracle DB
	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
	implementation 'com.oracle.database.security:osdt_cert'
	implementation 'com.oracle.database.security:oraclepki'
	implementation 'com.oracle.database.security:osdt_core'

	//
	implementation 'com.oracle.oci.sdk:oci-java-sdk:3.38.0'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-common:3.38.0'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage:3.38.0'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-common-httpclient:3.38.0'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-common-httpclient-choices:3.38.0'
	implementation ('com.oracle.oci.sdk:oci-java-sdk-common-httpclient-jersey3:3.37.0')

	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	//email
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
}

tasks.named('test') {
	useJUnitPlatform()
}



// FOR @ConfigurationProperties
tasks.named('compileJava') {
	inputs.files(tasks.named('processResources'))
}
